[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-31-Falling_Block.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Map_Parts/MP-31-Falling_block.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.5, 20 )

[sub_resource type="Animation" id=3]
resource_name = "Falling"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Warning"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[node name="MP-31-Falling-Block" type="Node2D" groups=[
"unkillable",
]]
position = Vector2( 10, 0 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Start_Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"map",
"unkillable",
]]
collision_layer = 20
collision_mask = 983062

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -10, 10 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 50.0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -10, 10 )
texture = ExtResource( 2 )
vframes = 2
hframes = 5

[node name="Area2D_Player" type="Area2D" parent="KinematicBody2D"]
position = Vector2( -10, -2 )
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D_Player"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Falling = SubResource( 3 )
anims/Start = SubResource( 4 )
anims/Warning = SubResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
[connection signal="body_entered" from="KinematicBody2D/Area2D_Player" to="." method="_on_Area2D_Player_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Area2D_Player" to="." method="_on_Area2D_Player_body_exited"]
